@startuml

title __APOLLO69's Class Diagram__\n

  namespace no.ntnu.idi.apollo69 {
    class no.ntnu.idi.apollo69.Apollo69 {
        - deviceId : String
        + Apollo69()
        + Apollo69()
        + create()
        + dispose()
        + render()
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    class no.ntnu.idi.apollo69.Device {
        {static} + DEVICE_ID : String
        {static} + NAME : String
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    interface no.ntnu.idi.apollo69.Variables {
        {static} + buttonHeight : float
        {static} + buttonWidth : float
        {static} + fontScale : float
        {static} + nicknameHeight : float
        {static} + spacing : float
        {static} + textExit : String
        {static} + textExitGame : String
        {static} + textJoin : String
        {static} + textPlay : String
        {static} + textSettings : String
    }
  }
  

  no.ntnu.idi.apollo69.Apollo69 -up-|> com.badlogic.gdx.ApplicationAdapter
  no.ntnu.idi.apollo69.Apollo69 o-- no.ntnu.idi.apollo69.navigation.Navigator : navigator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
